# ROS2_SquirtlebotProject

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/squirtlebot_bringup/share/squirtlebot_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/squirtlebot_bringup/share/squirtlebot_bringup/cmake/: squirtlebot_bringupConfig.cmake
install/squirtlebot_bringup/share/squirtlebot_bringup/launch/: squirtlesim.launch.xml  turtlebot3gazebo.launch.xml
install/squirtlebot_interfaces/share/squirtlebot_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/squirtlebot_interfaces/share/squirtlebot_interfaces/action/: SquirtleMove.idl
install/squirtlebot_interfaces/share/squirtlebot_interfaces/cmake/: ament_cmake_export_targets-extras.cmake  export_squirtlebot_interfaces__rosidl_generator_cExport.cmake  export_squirtlebot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_squirtlebot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  (+5 more)
install/squirtlebot_nodes/lib/squirtlebot_nodes/: squirtle_bridge  squirtle_controller  turtlebot3_controller  turtlesim_bridge
install/squirtlebot_nodes/share/squirtlebot_nodes/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/squirtlebot_py/lib/squirtlebot_py/: squirtle_controller_lifecycle_manager  turtlebot3_controller_lifecycle_manager
install/squirtlebot_py/share/squirtlebot_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/squirtlebot_bringup/: CMakeLists.txt
src/squirtlebot_interfaces/: CMakeLists.txt
src/squirtlebot_nodes/: CMakeLists.txt  package.xml
src/squirtlebot_nodes/src/: squirtle_controller.cpp  turtlebot3_controller.cpp
src/squirtlebot_py/: setup.cfg  setup.py
src/squirtlebot_py/squirtlebot_py/: turtlebot3_controller_lifecycle_manager.py
(+57 files in other folders)
